--- a/notebooks/task1/report.ipynb
+++ b/notebooks/task1/report.ipynb
@@ -12,7 +12,7 @@
     "# Team Ares -- Task 1 Report -- Fall 2020\n",
     "## Contributions:\n",
     "### Cody Shearer\n",
-    "Created/managed team repository. Helped setup environments.\n",
+    "Created/managed team repository. Helped setup development environments. Organized team meetings.\n",
     "\n",
     "### Zhymir Thompson\n",
     "### Mahmudul Hasan\n",
@@ -20,7 +20,7 @@
     "\n",
     "___\n",
     "\n",
-    "## Additional setup\n",
+    "## Additional setup for PyCharm jupyter notebooks (optional)\n",
     "While jupyter notebooks can be opened/run in the browser, if you would like to run it in PyCharm, you will first need to\n",
     "ensure you are running the Professional version of PyCharm (free for students). Once you have done so and upon opening\n",
     "this notebook you should be asked to install a jupyter notebook extension. Once installed, run the following in the\n",
@@ -31,6 +31,45 @@
     "python -m ipykernel install --user --name athena --display-name \"Python (athena)\n",
     "```\n",
     "Finally, select `Python (athena)` as the jupyter interpreter (visible in the bar above, when the notebook is open)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from tutorials.craft_adversarial_examples import generate_ae\n",
+    "print(os.getcwd())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tutorials'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-4-13d16d62d5fc>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mos\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[1;32mfrom\u001B[0m \u001B[0mtutorials\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcraft_adversarial_examples\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mgenerate_ae\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mos\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgetcwd\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'tutorials'"
+     ]
+    }
+   ],
+   "source": [
+    "# imports\n",
+    "from tutorials.craft_adversarial_examples import generate_ae\n",
+    "from utils.file import load_from_json"
    ]
   },
   {
@@ -113,9 +152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "athena",
+   "display_name": "Python (athena)",
    "language": "python",
-   "display_name": "Python (athena)"
+   "name": "athena"
   },
   "language_info": {
    "codemirror_mode": {
