--- a/notebooks/task1/report.ipynb
+++ b/notebooks/task1/report.ipynb
@@ -12,7 +12,7 @@
     "# Team Ares -- Task 1 Report -- Fall 2020\n",
     "## Contributions:\n",
     "### Cody Shearer\n",
-    "Created/managed team repository. Helped setup development environments. Organized team meetings.\n",
+    "Created/managed team repository. Helped setup development environments. Organized team meetings. Created experiements for and evaluated BIM attacks.\n",
     "\n",
     "### Zhymir Thompson\n",
     "### Mahmudul Hasan\n",
@@ -30,24 +30,19 @@
     "conda activate athena\n",
     "python -m ipykernel install --user --name athena --display-name \"Python (athena)\n",
     "```\n",
-    "Finally, select `Python (athena)` as the jupyter interpreter (visible in the bar above, when the notebook is open)."
+    "Finally, select `Python (athena)` as the jupyter interpreter (visible in the bar above, when the notebook is open).\n",
+    "\n",
+    "## A"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from tutorials.craft_adversarial_examples import generate_ae\n",
-    "print(os.getcwd())"
-   ],
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "source": []
   },
   {
    "cell_type": "code",
@@ -59,18 +54,14 @@
      "evalue": "No module named 'tutorials'",
      "output_type": "error",
      "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-4-13d16d62d5fc>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mos\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[1;32mfrom\u001B[0m \u001B[0mtutorials\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcraft_adversarial_examples\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mgenerate_ae\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mos\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgetcwd\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'tutorials'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-13d16d62d5fc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtutorials\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcraft_adversarial_examples\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgenerate_ae\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tutorials'"
      ]
     }
    ],
-   "source": [
-    "# imports\n",
-    "from tutorials.craft_adversarial_examples import generate_ae\n",
-    "from utils.file import load_from_json"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -101,11 +92,7 @@
      ]
     }
    ],
-   "source": [
-    "# imports\n",
-    "from tutorials.craft_adversarial_examples import generate_ae\n",
-    "from utils.file import load_from_json"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -137,10 +124,10 @@
      "evalue": "generate_ae() missing 1 required positional argument: 'attack_configs'",
      "output_type": "error",
      "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-3-e2b47272c7cd>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[1;31m# generate adversarial examples\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 3\u001B[1;33m \u001B[0mgenerate_ae\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmodel_configs\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdata_configs\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mattack_configs\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mTypeError\u001B[0m: generate_ae() missing 1 required positional argument: 'attack_configs'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-e2b47272c7cd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# generate adversarial examples\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mgenerate_ae\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel_configs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata_configs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattack_configs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: generate_ae() missing 1 required positional argument: 'attack_configs'"
      ]
     }
    ],
