--- a/notebooks/task1/report.ipynb
+++ b/notebooks/task1/report.ipynb
@@ -12,7 +12,11 @@
     "# Team Ares -- Task 1 Report -- Fall 2020\n",
     "## Contributions:\n",
     "### Cody Shearer\n",
-    "Created/managed team repository. Helped setup development environments. Organized team meetings. Created experiements for and evaluated BIM attacks.\n",
+    "- Created/managed team repository.\n",
+    "- Helped setup development environments.\n",
+    "- Added setup instructions for PyCharm jupyter notebooks.\n",
+    "- Organized team meetings.\n",
+    "- Created experiments, evaluation, and report on BIM attacks.\n",
     "\n",
     "### Zhymir Thompson\n",
     "### Mahmudul Hasan\n",
@@ -32,108 +36,39 @@
     "```\n",
     "Finally, select `Python (athena)` as the jupyter interpreter (visible in the bar above, when the notebook is open).\n",
     "\n",
-    "## A"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tutorials'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-13d16d62d5fc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtutorials\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcraft_adversarial_examples\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgenerate_ae\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tutorials'"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n",
-      "C:\\Users\\codyi\\anaconda3\\envs\\athena\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "C:\\Users\\codyi\\anaconda3\\envs\\athena\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "C:\\Users\\codyi\\anaconda3\\envs\\athena\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:528: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "C:\\Users\\codyi\\anaconda3\\envs\\athena\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:529: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "C:\\Users\\codyi\\anaconda3\\envs\\athena\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:530: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "C:\\Users\\codyi\\anaconda3\\envs\\athena\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:535: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# load configurations\n",
-    "model_configs = load_from_json(\"configs/model-mnist.json\")\n",
-    "data_configs = load_from_json(\"configs/data-mnist.json\")\n",
-    "attack_configs = load_from_json(\"configs/attack-zk-mnist.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "generate_ae() missing 1 required positional argument: 'attack_configs'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-e2b47272c7cd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# generate adversarial examples\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mgenerate_ae\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel_configs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata_configs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattack_configs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: generate_ae() missing 1 required positional argument: 'attack_configs'"
-     ]
-    }
-   ],
-   "source": [
-    "# generate adversarial examples\n",
-    "generate_ae(model_configs, data_configs, attack_configs)\n"
+    "## BIM Attack and Evaluation\n",
+    "Here we consider an adversarial attack on a convolutional neural network (CNN) trained on a subset (10%) of the MNIST dataset using five variations of the [basic iterative method](https://arxiv.org/pdf/1607.02533.pdf) (BIM). We hold the epsilon value constant at 0.10 while varying the maximum number of iterations to explore how this may impact the error rate of the undefeneded model (UM), an athena ensemble, and PGD-ADT. We test BIM with the following parameters:\n",
+    "- epsilon: 0.10\n",
+    "- max_iter: 100, 90, 80, 70, 60\n",
+    "\n",
+    "Using the following configurations, we generate AEs and evaluate their effectivness against the UM, the ensemble model, and PGD-ADT, using `notebooks/Task1_GenerateAEs_ZeroKnowledgeModel.ipynb`:\n",
+    "- `src/configs/task1/athena-mnist.json`\n",
+    "- `src/configs/task1/attack-bim-mnist.json`\n",
+    "- `src/configs/task1/data-bim-mnist.json`\n",
+    "\n",
+    "The AEs can be found at:\n",
+    "- `AE-mnist-cnn-clean-bim_eps0.1_maxiter60.npy`\n",
+    "- `AE-mnist-cnn-clean-bim_eps0.1_maxiter70.npy`\n",
+    "- `AE-mnist-cnn-clean-bim_eps0.1_maxiter80.npy`\n",
+    "- `AE-mnist-cnn-clean-bim_eps0.1_maxiter90.npy`\n",
+    "- `AE-mnist-cnn-clean-bim_eps0.1_maxiter100.npy`\n",
+    "\n",
+    "### Undefended Model Results\n",
+    "We find that the error rate drops only for the UM and only twice. We would expect these drops to occur only at 70 and 60, perhaps as some upper bound is reached. However, we find the interesting result that the drop in error rate occurs only from 100 to 90 and 70 to 60; the error rate is the same for 90, 80, and 70. \n",
+    "\n",
+    "### Ensemble and PGD-ADT Results\n",
+    "The ensemble has nearly the same error rate as PGD-ADT, which in all cases is about 2%. \n",
+    "\n",
+    "| BIM Error Rate (epsilon=0.1) |             |             |             |                                             |                                             |\n",
+    "|------------------------|-------------|-------------|-------------|---------------------------------------------|---------------------------------------------|\n",
+    "| Max Iterations         | UM          | Ensemble    | PGD-ADT     | 9->1                                        | 4->9                                        |\n",
+    "| 100                    | 0.933534743 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter90_9to1.png) | ![](figures/bim_eps0.1_maxiter100_4to9.png) |\n",
+    "| 90                     | 0.930513595 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter90_9to1.png)  | ![](figures/bim_eps0.1_maxiter90_4to9.png)  |\n",
+    "| 80                     | 0.930513595 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter80_9to1.png)  | ![](figures/bim_eps0.1_maxiter80_4to9.png)  |\n",
+    "| 70                     | 0.930513595 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter70_9to1.png)  | ![](figures/bim_eps0.1_maxiter70_4to9.png)  |\n",
+    "| 60                     | 0.926485398 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter60_9to1.png)  | ![](figures/bim_eps0.1_maxiter60_4to9.png)  |\n",
+    "\n",
+    "In conclusion, BIM is only effective against the UM, with the erorr rates of the ensemble model and PGD-ADT being around 2%. Changes to the maximum iterations for BIM only have a (slight) effect on the UM, with the ensemble model and PGD-ADT defenses seeing no change."
    ]
   }
  ],
