--- a/notebooks/task1/report.ipynb
+++ b/notebooks/task1/report.ipynb
@@ -22,7 +22,7 @@
     "### Mahmudul Hasan\n",
     "### Vincent Davidson\n",
     "- Co-managed team's project meetings.\n",
-    "- Co-managed each team member's individual contributions./n",
+    "- Co-managed each team member's individual contributions.\n",
     "- Created experiments, evaluation and report on PGD attacks.\n",
     "\n",
     "___\n",
