--- a/notebooks/task1/report.ipynb
+++ b/notebooks/task1/report.ipynb
@@ -70,13 +70,20 @@
     "\n",
     "In conclusion, BIM is only effective against the UM, with the erorr rates of the ensemble model and PGD-ADT being around 2%. Changes to the maximum iterations for BIM only have a (slight) effect on the UM, with the ensemble model and PGD-ADT defenses seeing no change."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (athena)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "athena"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -88,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
