added second report including entries for 3 of 4 members to avoid merge conflict

--- a/notebooks/task1/report_3_of_4.ipynb
+++ b/notebooks/task1/report_3_of_4.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "### Results\n",
     "\n",
-    "#### Summary\n",
+    "#### Summary and Analysis\n",
     "\n",
     "The L2 vs LINF norm showed a higher error rate result overall with LINF normalization for most cases.\n",
     "The data also supports the idea that high learning rates have a slight edge over weak learning rates, but the actual difference is insignificant and could easily disappear given a larger sample size.\n",
