--- a/notebooks/task1/report.ipynb
+++ b/notebooks/task1/report.ipynb
@@ -19,7 +19,6 @@
     "- Created experiments, evaluation, and report on BIM attacks.\n",
     "\n",
     "### Zhymir Thompson\n",
-    "- Performed experiments, gathered results for Carlini Wagner attack.\n",
     "### Mahmudul Hasan\n",
     "### Vincent Davidson\n",
     "\n",
@@ -71,21 +70,18 @@
     "\n",
     "In conclusion, BIM is only effective against the UM, with the erorr rates of the ensemble model and PGD-ADT being around 2%. Changes to the maximum iterations for BIM only have a (slight) effect on the UM, with the ensemble model and PGD-ADT defenses seeing no change.\n",
     "\n",
-    "## CW Attack and Evaluation\n",
-    "For the CW attack, the variables altered were the learning rate and normalization method. There are a total of 10 variations where 5 learning rates are repeated for each normalization method. The files for this attack are stored in ~/src/task1/attack2.\n",
-    "### Results\n",
-    "|Norm |LR  |UM      |Ensemble|PGD-ADT|  |\n",
-    "|-----|----|--------|------|-----|-----|\n",
-    "|L2   |0.02|0.4     |0.0   |0.0  |     |\n",
-    "|L2   |0.2 |0.5     |0.0   |0.1  |     |\n",
-    "|L2|0.002|0.5|0.0|0.0|\n",
-    "|L2|0.99|0.6|0.0|0.1|\n",
-    "|L2|0.00002|0.8|0.8|0.8|\n",
-    "|LINF|0.02|0.8|0.8|0.8|\n",
-    "|LINF|0.2|0.8|0.8|0.8|\n",
-    "|LINF|0.002|0.8|0.8|0.8|\n",
-    "|LINF|0.99|0.8|0.8|0.8|\n",
-    "|LINF|0.00002|0.7|0.8|0.8|"
+    "\n",
+    "### Ensemble and PGD-ADT Results\n",
+    "\n",
+    "| PGD Error Rate |           |            |            |                  |\n",
+    "|------------------------|-------------|-------------|---------------------------------------------|---------------------------------------|\n",
+    "|                    |   UM     |   Ensemble   |   PGD-ADT  |\n",
+    "|    Epsilon=0.3    |    0.8   |     0.9      |    1.0     |\n",
+    "|    Epsilon=0.5    |    0.7   |     0.9      |    0.8     |\n",
+    "|    Epsilon=0.1    |    0.9   |     1.0      |    1.0     |\n",
+    "|    Epsilon=0.7    |    0.7   |     0.9      |    0.7     |\n",
+    "|    Epsilon=0.8    |    0.7   |     0.9      |    0.7     |\n",
+    "    "
    ]
   },
   {
