--- a/notebooks/task1/report.ipynb
+++ b/notebooks/task1/report.ipynb
@@ -19,8 +19,13 @@
     "- Created experiments, evaluation, and report on BIM attacks.\n",
     "\n",
     "### Zhymir Thompson\n",
+    "- Performed experiments, gathered results for Carlini Wagner attack.\n",
+    "\n",
     "### Mahmudul Hasan\n",
     "### Vincent Davidson\n",
+    "- Co-managed team meetings\n",
+    "- Co-managed/organized individual contributions for each team member\n",
+    "- Performed experiments, evaluation and analysis on PGD attacks. \n",
     "\n",
     "___\n",
     "\n",
@@ -70,6 +75,114 @@
     "\n",
     "In conclusion, BIM is only effective against the UM, with the erorr rates of the ensemble model and PGD-ADT being around 2%. Changes to the maximum iterations for BIM only have a (slight) effect on the UM, with the ensemble model and PGD-ADT defenses seeing no change.\n",
     "\n",
+    "## CW Attack and Evaluation\n",
+    "\n",
+    "For the CW attack, the variables altered were the learning rate and normalization method. There are a total of 10 variations where 5 learning rates are repeated for each normalization method. The files for this attack are stored in ~/src/task1/attack2.\n",
+    "\n",
+    "### Files Used\n",
+    "\n",
+    "Configs:\n",
+    "* athena-mnist.json\n",
+    "* attack-config.json\n",
+    "* data-config.json\n",
+    "* model-config.json\n",
+    "* ./results/sub-data-config.json\n",
+    "\n",
+    "sub-samples:\n",
+    "\n",
+    "* sublabels-10-ratio_0.001-477207.062.npy\n",
+    "* subsamples-10-ratio_0.001-477207.062.npy\n",
+    "\n",
+    "AE's:\n",
+    "\n",
+    "* cw-L2-lr0.2.npy\n",
+    "* cw-L2-lr0.02.npy\n",
+    "* cw-L2-lr0.002.npy\n",
+    "* cw-L2-lr0.00002.npy\n",
+    "* cw-L2-lr0.99.npy\n",
+    "* cw-Lf-lr0.2.npy\n",
+    "* cw-Lf-lr0.02.npy\n",
+    "* cw-Lf-lr0.002.npy\n",
+    "* cw-Lf-lr0.00002.npy\n",
+    "* cw-Lf-lr0.99.npy\n",
+    "\n",
+    "_\\*AEs located in ./results folder_\n",
+    "\n",
+    "### Results\n",
+    "\n",
+    "#### Summary and Analysis\n",
+    "\n",
+    "The L2 vs LINF norm showed a higher error rate result overall with LINF normalization for most cases.\n",
+    "The data also supports the idea that high learning rates have a slight edge over weak learning rates, but the actual difference is insignificant and could easily disappear given a larger sample size.\n",
+    "The data was only trained on a sample size of 10 due to the large increase time for a factor increase of 10.\n",
+    "\n",
+    "#### Data\n",
+    "\n",
+    "|Norm |LR  |UM      |Ensemble|PGD-ADT|  |\n",
+    "|-----|----|--------|------|-----|-----|\n",
+    "|L2   |0.02|0.4     |0.0   |0.0  |     |\n",
+    "|L2   |0.2 |0.5     |0.0   |0.1  |     |\n",
+    "|L2|0.002|0.5|0.0|0.0|\n",
+    "|L2|0.99|0.6|0.0|0.1|\n",
+    "|L2|0.00002|0.8|0.8|0.8|\n",
+    "|LINF|0.02|0.8|0.8|0.8|\n",
+    "|LINF|0.2|0.8|0.8|0.8|\n",
+    "|LINF|0.002|0.8|0.8|0.8|\n",
+    "|LINF|0.99|0.8|0.8|0.8|\n",
+    "|LINF|0.00002|0.7|0.8|0.8|\n",
+    "\n",
+    "\n",
+    "## JSMA Attack and Evaluation\n",
+    "We worked with JSMA attack on a convolutional neural network (CNN). We used the following values for gamma \n",
+    "\n",
+    "gamma: 0.30, 0.40, 0.50, 0.60, 0.70\n",
+    "\n",
+    "By using notebooks/Task1_GenerateAEs_ZeroKnowledgeModel.ipynb:\n",
+    "* src/practice task1/at.json\n",
+    "* src/practice task1/md.json\n",
+    "* src/practice task1/dt.json\n",
+    "We can get  AEs at:\n",
+    "* 215272.937.npy\n",
+    "* 215373.062.npy\n",
+    "* 215373.156.npy\n",
+    "* 215373.25.npy\n",
+    "* 215373.343.npy\n",
+    "\n",
+    "### Undefended Model Results\n",
+    "We can see  that the error rate was reduced  for the UM and it reduced five times, where Y predicted shape is 10. Moreover, Ensemble and JSMA are also zero. Furthermore, at 215272.937.npy, 215373.062.npy, 215373.156.npy, \n",
+    "215373.25.npy, 215373.343.npy, the value of UM, Ensemble and JSMA are zero.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## PGD Attack and Evaluation \n",
+    "- The PGD attack is trained on a subset of the MNIST dataset using five variations of the attack. The variables altered were the epsilon between the number 0 and 1. \n",
+    "\n",
+    "## Files Used\n",
+    "Configs: \t\n",
+    "* athena-mnist.json\n",
+    "* attack-zk-mnist.json\n",
+    "* data-mnist.json\n",
+    "* model-mnist.json\n",
+    "* ./results/sample.json\n",
+    "\n",
+    "Sub-samples:\n",
+    "* sublabels-10-ratio_0.001-5.142948666.npy\n",
+    "* subsamples-10-ratio_0.001-5.142948666.npy\n",
+    "\n",
+    "AE’s:\n",
+    "* pgd-eps0.1.npy\n",
+    "* pgd-eps0.8.npy\n",
+    "* pgd-eps0.7.npy\n",
+    "* pgd-eps0.5.npy\n",
+    "* pgd-eps0.3npy\n",
+    "\n",
+    "*AEs located in ./results folder\n",
+    "\n",
+    "## Summary and Analysis \n",
+    "\n",
+    "The epsilon showed a consistent error rate of each variation between the range of 0.7 and 1.0, indicating the number of inputs that fools the model. So, the higher the number closest to 1.0 the better.  \n",
+    "\n",
+    "## Data:\n",
     "\n",
     "### Ensemble and PGD-ADT Results\n",
     "\n",
@@ -80,8 +193,7 @@
     "|    Epsilon=0.5    |    0.7   |     0.9      |    0.8     |\n",
     "|    Epsilon=0.1    |    0.9   |     1.0      |    1.0     |\n",
     "|    Epsilon=0.7    |    0.7   |     0.9      |    0.7     |\n",
-    "|    Epsilon=0.8    |    0.7   |     0.9      |    0.7     |\n",
-    "    "
+    "|    Epsilon=0.8    |    0.7   |     0.9      |    0.7     |    "
    ]
   },
   {
