--- a/Task1/report.ipynb
+++ b/Task1/report.ipynb
@@ -22,6 +22,27 @@
     "- Performed experiments, gathered results for Carlini Wagner attack.\n",
     "\n",
     "### Mahmudul Hasan\n",
+    "- We worked with JSMA attack on a convolutional neural network (CNN).\n"
+    "- We used the following values for gamma\n"
+    "- gamma: 0.30, 0.40, 0.50, 0.60, 0.70\n"
+    "- By using notebooks/Task1_GenerateAEs_ZeroKnowledgeModel.ipynb:\n"
+    "- src/practice task1/at.json \n"
+    "- src/practice task1/md.json \n"
+    "- src/practice task1/dt.json \n"
+      "- We can get  AEs at:
+    "- 	215272.937.npy \n"
+"-215373.062.npy \n"
+"-	215373.156.npy \n" 
+"-215373.25.npy \n"
+"-215373.343.npy \n"
+    "- •	We can see  that the error rate was reduced  for the UM and it reduced five times, where Y predicted shape is 10. /n"
+    "- Moreover, Ensemble and JSAM are also zero. Furthermore, at 215272.937.npy, 215373.062.npy, 215373.156.npy, /n"
+    
+"-215373.25.npy, 215373.343.npy, the value of UM, Ensemble and JSMA are zero.
+
+   "
+
+
     "### Vincent Davidson\n",
     "- Co-managed team meetings\n",
     "- Co-managed/organized individual contributions for each team member\n",
