--- a/Task1/report.ipynb
+++ b/Task1/report.ipynb
@@ -31,16 +31,16 @@
     "- src/practice task1/dt.json \n"
       "- We can get  AEs at:
     "- 	215272.937.npy \n"
-"-215373.062.npy \n"
-"-	215373.156.npy \n" 
-"-215373.25.npy \n"
-"-215373.343.npy \n"
-    "- •	We can see  that the error rate was reduced  for the UM and it reduced five times, where Y predicted shape is 10. /n"
+    "-215373.062.npy \n"
+    "-	215373.156.npy \n" 
+    "-215373.25.npy \n"
+    "-215373.343.npy \n"
+    "- We can see  that the error rate was reduced  for the UM and it reduced five times, where Y predicted shape is 10. /n"
     "- Moreover, Ensemble and JSAM are also zero. Furthermore, at 215272.937.npy, 215373.062.npy, 215373.156.npy, /n"
     
-"-215373.25.npy, 215373.343.npy, the value of UM, Ensemble and JSMA are zero.
+    "-215373.25.npy, 215373.343.npy, the value of UM, Ensemble and JSMA are zero./n"
 
-   "
+     "\n",
 
 
     "### Vincent Davidson\n",
