--- a/Task1/report.ipynb
+++ b/Task1/report.ipynb
@@ -22,6 +22,8 @@
     "- Performed experiments, gathered results for Carlini Wagner attack.\n",
     "\n",
     "### Mahmudul Hasan\n",
+    "- Performed experiment, did evaluation and made report on JSMA attack. \n",
+    "\n",
     "### Vincent Davidson\n",
     "- Co-managed team meetings\n",
     "- Co-managed/organized individual contributions for each team member\n",
@@ -222,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
