Wrote in report contro for Mahmudul

--- a/Task1/report.ipynb
+++ b/Task1/report.ipynb
@@ -22,6 +22,7 @@
     "- Performed experiments, gathered results for Carlini Wagner attack.\n",
     "\n",
     "### Mahmudul Hasan\n",
+    "- Performed JSMA experiment, did evaluation and wrote JSMA report.\n",
     "### Vincent Davidson\n",
     "- Co-managed team meetings\n",
     "- Co-managed/organized individual contributions for each team member\n",
