Added training/testing data, script for generating training testing data, and section of report discussing the generation of the data.
Note that the data is split with 7-zip into 3 parts

--- a/Task2/Report.ipynb
+++ b/Task2/Report.ipynb
@@ -8,6 +8,9 @@
     "## Contributions:\n",
     "### Cody Shearer\n",
     "- Created approach for task 2 and broke it down into managable steps.\n",
+    "- Created script for generating training/testing data \n",
+    "- Generated training/testing data\n",
+    "- Wrote report section on generating training/testing data\n",
     "- Managed team repository.\n",
     "- Organized team meetings.\n",
     "\n",
@@ -61,8 +64,65 @@
     "  2. Experimental settings --- the values of the tunable parameters for each variant.\n",
     "  3. Evaluation and necessary analysis.\n",
     "  4. Contribution of individual team members.\n",
-    "  5. Citations to all related works."
+    "  5. Citations to all related works.\n",
+    "  \n",
+    "  ## Generating Training and Testing Data\n",
+    "  We collected raw predictions as logits from 19 sets of 10k MNIST images run through 16 weak defenses using `src/scripts/cody_scripts/generate_test_data.py` and saved them at . \n",
+    "  \n",
+    "  While the original plan was to collect raw predicitons as logits from 73 models (the original CNN plus the 72 weak defenses from `/src/configs/demo/athena-mnist.json`) and all 45 sets of images (the original MNIST dataset, along with 44 adversarial examples from `/src/configs/demo/data-mnist.json`), the predictions from one model for one set of 10k images comes to ~35MB, so 73 models x 45 MNIST sets x 35MB = 114.975GB. This wasn't feasible, so we selected a representative sample of weak defenses and adversarial examples, where we have 16 models x 19 MNIST sets x 35MB = 10.64GB. This was further compressed with numpy's `savez_compressed` function within the `src/scripts/cody_scripts/generate_test_data.py` script, bringing the saved predictions at `Task2/data/predictions.npz` down to ~126MB. As github has a maximum 100MB limit on large files, we use 7-zip to store the predicitions in 3 parts.\n",
+    "  \n",
+    "  ### Weak Defenses\n",
+    "  Our selection of weak defenses used to generate the predictions includes one model for each \"type\" of weak defense found in `/src/configs/task2/cody_configs/athena-mnist.json` (also available as a set of \"active_wds\"): \n",
+    "  - model-mnist-cnn-clean.h5\n",
+    "  - model-mnist-cnn-rotate90.h5\n",
+    "  - model-mnist-cnn-shift_left.h5\n",
+    "  - model-mnist-cnn-flip_horizontal.h5\n",
+    "  - model-mnist-cnn-affine_vertical_compress.h5\n",
+    "  - model-mnist-cnn-morph_erosion.h5\n",
+    "  - model-mnist-cnn-augment_samplewise_std_norm.h5\n",
+    "  - model-mnist-cnn-cartoon_mean_type1.h5\n",
+    "  - model-mnist-cnn-quant_4_clusters.h5\n",
+    "  - model-mnist-cnn-distort_x.h5\n",
+    "  - model-mnist-cnn-noise_gaussian.h5\n",
+    "  - model-mnist-cnn-filter_sobel.h5\n",
+    "  - model-mnist-cnn-compress_jpeg_quality_80.h5\n",
+    "  - model-mnist-cnn-denoise_tv_chambolle.h5\n",
+    "  - model-mnist-cnn-geo_swirl.h5\n",
+    "  - model-mnist-cnn-seg_gradient.h5\n",
+    "  \n",
+    "  ### Adversarial (and clean) Examples\n",
+    "  Our selection of samples includes the original MNIST dataset, along with two sets of samples per \"type\" of transformation found in `/src/configs/demo/data-mnist.json`. For each transformation, we select the two sets of AEs that are the most different. You can find the following at `/src/configs/task2/cody_configs/data-mnist.json`:\n",
+    "  - test_BS-mnist-clean.npy\n",
+    "  - test_AE-mnist-cnn-clean-fgsm_eps0.1.npy\n",
+    "  - test_AE-mnist-cnn-clean-fgsm_eps0.3.npy\n",
+    "  - test_AE-mnist-cnn-clean-bim_ord2_eps0.75.npy\n",
+    "  - test_AE-mnist-cnn-clean-bim_ord2_eps1.2.npy\n",
+    "  - test_AE-mnist-cnn-clean-bim_ordinf_eps0.075.npy\n",
+    "  - test_AE-mnist-cnn-clean-bim_ordinf_eps0.12.npy\n",
+    "  - test_AE-mnist-cnn-clean-cw_l2_lr0.0098.npy\n",
+    "  - test_AE-mnist-cnn-clean-cw_l2_lr0.018.npy\n",
+    "  - test_AE-mnist-cnn-clean-deepfool_l2_overshoot3.npy\n",
+    "  - test_AE-mnist-cnn-clean-deepfool_l2_overshoot50.npy\n",
+    "  - test_AE-mnist-cnn-clean-jsma_theta0.15_gamma0.5.npy\n",
+    "  - test_AE-mnist-cnn-clean-jsma_theta0.25_gamma0.5.npy\n",
+    "  - test_AE-mnist-cnn-clean-pgd_eps0.075.npy\n",
+    "  - test_AE-mnist-cnn-clean-pgd_eps0.11.npy\n",
+    "  - test_AE-mnist-cnn-clean-mim_eps0.06.npy\n",
+    "  - test_AE-mnist-cnn-clean-mim_eps0.1.npy\n",
+    "  - test_AE-mnist-cnn-clean-onepixel_pxCount15.npy\n",
+    "  - test_AE-mnist-cnn-clean-onepixel_pxCount75.npy"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
