--- a/Task2/Report.ipynb
+++ b/Task2/Report.ipynb
@@ -110,7 +110,42 @@
     "  - test_AE-mnist-cnn-clean-mim_eps0.06.npy\n",
     "  - test_AE-mnist-cnn-clean-mim_eps0.1.npy\n",
     "  - test_AE-mnist-cnn-clean-onepixel_pxCount15.npy\n",
-    "  - test_AE-mnist-cnn-clean-onepixel_pxCount75.npy"
+    "  - test_AE-mnist-cnn-clean-onepixel_pxCount75.npy\n",
+    "  \n",
+    "  ## Model Training Steps\n",
+    "  \n",
+    "  ### Training/Test Data\n",
+    "  Current location: src/scripts/zhymir_scripts/train_test\n",
+    "  \n",
+    "  - test_data\n",
+    "  - test_labels\n",
+    "  - train_data*\n",
+    "  - train_labels\n",
+    "  \n",
+    "  \\* All data needs to be unzipped for use and zipped before upload\n",
+    "  \n",
+    "  \\* train_data is too big to be on github so needs to be split across zip files and unzipped as one file\n",
+    "  \n",
+    "  ### Training steps\n",
+    "  #### General Steps\n",
+    "  * load training data (train_data, train_labels)\n",
+    "  * ~~Create Ensemble~~ Training_data is composed of Ensemble results\n",
+    "  * Create model:\n",
+    "      * model takes input from Ensemble and outputs number from 0-9\n",
+    "  * ~~Feed images through Ensemble and train model on output~~ Train model on train_data and train_labels\n",
+    "  \n",
+    "  #### Detailed steps\n",
+    "  * train_data = np.load([location of train_data])\n",
+    "  * train_labels = np.load([location of train_labels])\n",
+    "  * Create model (see tensorflow tutorial, task2.py, task2_load_from_data.py for help):\n",
+    "      * input_shape = (# classifiers, 10)\n",
+    "      * Flatten for ease of training\n",
+    "      * output is size 10\n",
+    "  * model.compile (tensorflow tutorial, keras loss, keras optimizer):\n",
+    "      * define optimizer and loss for model\n",
+    "  * train model:\n",
+    "      * epochs = 10, validation_split = 0.1\n",
+    "  * save model -> model.save([path/filename])"
    ]
   },
   {
@@ -123,13 +158,20 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (athena)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "athena"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
