--- a/Task2/Report.ipynb
+++ b/Task2/Report.ipynb
@@ -7,11 +7,11 @@
     "# Team Ares -- Task 2 Report -- Fall 2020\n",
     "## Contributions:\n",
     "### Cody Shearer\n",
-    "- Created approach for task 2 and broke it down into managable steps.\n",
-    "- Created script for generating training/testing data \n",
-    "- Generated training/testing data\n",
+    "- Created [approach for task 2](https://github.com/csce585-mlsystems/project-athena/issues/25) and broke it down into managable steps.\n",
+    "- Created script for and generated training/testing data \n",
     "- Wrote report section on generating training/testing data\n",
-    "- Wrote code for generating loss plot\n",
+    "- Wrote code for generating loss plots in report\n",
+    "- Wrote introduction in report\n",
     "- Managed team repository.\n",
     "- Organized team meetings.\n",
     "\n",
@@ -71,6 +71,13 @@
     "  3. Evaluation and necessary analysis.\n",
     "  4. Contribution of individual team members.\n",
     "  5. Citations to all related works.\n",
+    "  \n",
+    "## Introduction\n",
+    "Machine learning models have proven capable of learning many complex tasks, however, [their tendency to rely on extraneous information](https://spectrum.ieee.org/cars-that-think/transportation/sensors/slight-street-sign-modifications-can-fool-machine-learning-algorithms) makes their use in mission critical applications an important and difficult challenge. For this reason, extensive research has been conducted on defensive against adversarial attacks.\n",
+    "\n",
+    "In their work on [ATHENA](https://arxiv.org/abs/2001.00308), Ying et al. solve the problem of adversarial defense, not as a technique, but as a framework, wherein a variable number of weak adversarial defenses (an ensemble) are trained and their collective predictions are used to create a response to adversarial attacks, the robustness and overhead of which are inversely correlated and controlled by the number of weak defenses. The method of collecting these predictions is called an \"ensemble strategy\" and is the main topic of our exploration.\n",
+    "\n",
+    "While Ying et al. used a fixed ensemble strategy, where a final prediction is attained by a majority vote amongst the weak defenses, we propose a learning based ensemble strategy.    \n",
     "  \n",
     "## Generating Training and Testing Data\n",
     "We collected raw predictions as logits from 19 sets of 10k MNIST images run through 16 weak defenses using `src/scripts/cody_scripts/generate_test_data.py` and saved them at . \n",
