Made minor changes to report

--- a/Task2/Report.ipynb
+++ b/Task2/Report.ipynb
@@ -151,7 +151,36 @@
     "      * define optimizer and loss for model\n",
     "  * train model:\n",
     "      * epochs = 10, validation_split = 0.1\n",
-    "  * save model -> model.save([path/filename])"
+    "  * save model -> model.save([path/filename])\n",
+    "\n",
+    "## Experimental Settings\n",
+    "\n",
+    "### Models:\n",
+    "\n",
+    "* zhymir_model_2_layer.h5\n",
+    "* zhymir_model_4_layer.h5\n",
+    "* zhymir_model_batch_8_4_layer.h5\n",
+    "\n",
+    "\n",
+    "### Model Parameters:\n",
+    "\n",
+    "#### Model: \"zhymir_model_2_layer.h5\"\n",
+    "_________________________________________________________________\n",
+    "\n",
+    "##### Layer (type)                 Output Shape              Param #   \n",
+    "===============================================================\n",
+    "D1 (Dense)                   (None, 16, 100)           1100      \n",
+    "_________________________________________________________________\n",
+    "flatten_1 (Flatten)          (None, 1600)              0         \n",
+    "_________________________________________________________________\n",
+    "##### output_layer (Dense)         (None, 10)                16010     \n",
+    "=================================================================\n",
+    "Total params: 17,110\n",
+    "Trainable params: 17,110\n",
+    "Non-trainable params: 0\n",
+    "_________________________________________________________________\n",
+    "None\n",
+    "\n"
    ]
   },
   {
