edited report, accidentally changed cody script but checked out from master

--- a/Task2/Report.ipynb
+++ b/Task2/Report.ipynb
@@ -162,32 +162,41 @@
     "\n",
     "## Experimental Settings\n",
     "\n",
+    "For the models, the following were held constant:\n",
+    "* Training data used\n",
+    "* Testing data used\n",
+    "* Loss function - Categorical loss\n",
+    "* Optimizer - Adam\n",
+    "* Output layer activation - softmax\n",
+    "\n",
     "### Models:\n",
     "\n",
-    "* zhymir_model_2_layer.h5\n",
-    "* zhymir_model_4_layer.h5\n",
-    "* zhymir_model_batch_8_4_layer.h5\n",
-    "\n",
+    "* cody_model_2_layer_batch_2_history\n",
+    "* zhymir_model_2_layer_history\n",
+    "* zhymir_model_4_layer_history\n",
+    "* zhymir_model_batch_8_4_layer_history\n",
     "\n",
     "### Model Parameters:\n",
     "\n",
-    "#### Model: \"zhymir_model_2_layer.h5\"\n",
-    "_________________________________________________________________\n",
+    "#### cody_model_2_layer_batch_2_history\n",
     "\n",
-    "##### Layer (type)                 Output Shape              Param #   \n",
-    "===============================================================\n",
-    "D1 (Dense)                   (None, 16, 100)           1100      \n",
-    "_________________________________________________________________\n",
-    "flatten_1 (Flatten)          (None, 1600)              0         \n",
-    "_________________________________________________________________\n",
-    "##### output_layer (Dense)         (None, 10)                16010     \n",
-    "=================================================================\n",
-    "Total params: 17,110\n",
-    "Trainable params: 17,110\n",
-    "Non-trainable params: 0\n",
-    "_________________________________________________________________\n",
-    "None\n",
-    "\n"
+    "* Batch size: 2\n",
+    "* Epochs: 20\n",
+    "\n",
+    "#### zhymir_model_2_layer_history\n",
+    "\n",
+    "* Batch size: 10\n",
+    "* Epochs: 20\n",
+    "\n",
+    "#### zhymir_model_4_layer_history\n",
+    "\n",
+    "* Batch size: 10\n",
+    "* Epochs: 20\n",
+    "\n",
+    "#### zhymir_model_batch_8_4_layer_history\n",
+    "\n",
+    "* Batch size: 8\n",
+    "* Epochs: 20\n"
    ]
   },
   {
@@ -263,22 +272,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis \n",
-    "The \"Ensemble Validation and Training Metrics\" graph shows that the loss jumped\n",
-    "randomly between 0.01 and 0.08for all models. On a scale of 0-1.0\n",
-    "this loss seems decent. However, individual WDs tend to have better\n",
-    "results against their respective AEs, so we would expect our models\n",
-    "to have a much greater advantage. At the very least, we would expect\n",
-    "the models to show a stronger trend with either an increase or a \n",
-    "decrease in loss. We used 19,000 images (1,000 each images from 18 \n",
-    "AEs + 1,000 from clean) to generate the train/test data for our split.\n",
-    "With a 80/20 split between training and test along with 10% of the \n",
-    "training data being used for validation, we trained our models on \n",
-    "approximately 13,680 images. Possible avenues for improvement would \n",
+    "# Analysis\n",
+    "\n",
+    "The \"Ensemble Validation and Training Metrics\" graph shows that the loss dropped from 0.10 to around 0.1-0.2 for most and 0.05 for \"2 layer 2 batch\". The accuracy for all of the models was above 99%. These values seem exceptional initially, but the validation data for both tell a different story. The \"val_loss\" shows the validation loss for each model. The values constantly jump around with a slight increase increase in average loss after epoch 5. This suggests that the models were likely already trained well by that point. This theory is further supported by \"val_categorical_accuracy\" because the values start above 99% and trend upward slightly until about epoch 10. The validation data clashes with the training data in a way that is difficult to explain. The most likely culprit is overfitting that happens to work because the WD results are relatively the same. We used 19,000 images (1,000 each images from 18 AEs + 1,000 from clean) to generate the train/test data for our split. With a 80/20 split between training and test along with 10% of the training data being used for validation, we trained our models on approximately 13,680 images. The best possible avenue for improvement would \n",
     "likely be to use more examples since, unlike most cases, we have the\n",
-    "ability to as many AEs as desired, and adjusting the model's network\n",
-    "structure with either adding more layers or modifying the way the\n",
-    "input is initially parsed."
+    "ability to as many AEs as desired."
    ]
   },
   {
@@ -313,6 +311,90 @@
     "model = models.load_model('models/cody_model_2_layer_batch_2.h5')\n",
     "print(model.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "D1 (Dense)                   (None, 16, 100)           1100      \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 1600)              0         \n",
+      "_________________________________________________________________\n",
+      "output_layer (Dense)         (None, 10)                16010     \n",
+      "=================================================================\n",
+      "Total params: 17,110\n",
+      "Trainable params: 17,110\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "D1 (Dense)                   (None, 16, 32)            352       \n",
+      "_________________________________________________________________\n",
+      "flatten_2 (Flatten)          (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "D2 (Dense)                   (None, 100)               51300     \n",
+      "_________________________________________________________________\n",
+      "D3 (Dense)                   (None, 50)                5050      \n",
+      "_________________________________________________________________\n",
+      "output_layer (Dense)         (None, 10)                510       \n",
+      "=================================================================\n",
+      "Total params: 57,212\n",
+      "Trainable params: 57,212\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "D1 (Dense)                   (None, 16, 32)            352       \n",
+      "_________________________________________________________________\n",
+      "flatten_3 (Flatten)          (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "D2 (Dense)                   (None, 100)               51300     \n",
+      "_________________________________________________________________\n",
+      "D3 (Dense)                   (None, 50)                5050      \n",
+      "_________________________________________________________________\n",
+      "output_layer (Dense)         (None, 10)                510       \n",
+      "=================================================================\n",
+      "Total params: 57,212\n",
+      "Trainable params: 57,212\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "tf.compat.v1.logging.set_verbosity(tf.compat.v1.logging.ERROR)\n",
+    "from keras.models import load_model\n",
+    "model = load_model('models/zhymir_model_2_layer.h5', compile=False)\n",
+    "print(model.summary())\n",
+    "model2 = load_model('models/zhymir_model_4_layer.h5', compile=False)\n",
+    "print(model2.summary())\n",
+    "model3 = load_model('models/zhymir_model_batch_8_4_layer.h5', compile=False)\n",
+    "print(model3.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
