Added two members contributions

--- a/Task2/Report.ipynb
+++ b/Task2/Report.ipynb
@@ -22,8 +22,13 @@
     "- Created script to parse history object dictionary for data to plot (currently plots loss and accuracy)\n",
     "\n",
     "### Mahmudul Hasan\n",
+    "\n",
+    "- Created models to use train/testing data\n",
+    "- Created script to train model and save results\n",
+    "\n",
     "### Vincent Davidson\n",
     "\n",
+    "- Discussed with team about plan \n",
     "___\n",
     "\n",
     "## Informal Breakdown of Our Approach\n",
