added plot and code for plotting example BIM AEs

--- a/Task1_update/report.ipynb
+++ b/Task1_update/report.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "$$ X^{adv}_0 = X,\\space\\space\\space X^{adv}_{N+1} = Clip_{X,\\epsilon}\\{X^{adv}_N + \\alpha sign(\\nabla_X J(X^{adv}_N,y_{true}))\\} $$\n",
     "\n",
-    "We see that at the initial iteration, the adversarial image is just the source image. With each subsequent iteration, an $\\alpha$ amount of perterbations are applied to the previous image, such that the resulting image remains visually similar to the previous image. \n",
+    "We see that at the initial iteration, the adversarial image is just the source image and with each subsequent step, an $\\alpha$ amount of the perterbations are applied, such that at each step the resulting image remains visually similar to the previous image. \n",
     "\n",
     "### Experimental Setting\n",
     "Here we consider an adversarial attack on a convolutional neural network (CNN) trained on a subset (10%) of the MNIST dataset using nine variations of the [basic iterative method](https://arxiv.org/pdf/1607.02533.pdf) (BIM). We generate these variations as a pairwise combination over the epsilon values of `0.1, 0.2, 0.3` and maximum iteration values of `50, 60, 70` to reveal how these parameters influence the error rate of the undefeneded model (UM), an athena ensemble, and PGD-ADT. \n",
@@ -70,7 +70,6 @@
     "- `src/configs/task1/data-bim-mnist.json`\n",
     "\n",
     "The AEs can be found at `Task3/data/AE-mnist-cnn-clean-bim_eps{e}_maxiter{i}.npy`, where `e` is a value for epsilon and `i` is the maximum number of iterations.\n",
-    "\n",
     "### Undefended Model Results\n",
     "We find that the error rate drops only for the UM and only twice. We would expect these drops to occur only at 70 and 60, perhaps as some upper bound is reached. However, we find the interesting result that the drop in error rate occurs only from 100 to 90 and 70 to 60; the error rate is the same for 90, 80, and 70. \n",
     "\n",
@@ -87,9 +86,13 @@
     "| 60                     | 0.926485398 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter60_9to1.png)  | ![](figures/bim_eps0.1_maxiter60_4to9.png)  |\n",
     "\n",
     "In conclusion, BIM is only effective against the UM, with the erorr rates of the ensemble model and PGD-ADT being around 2%. Changes to the maximum iterations for BIM only have a (slight) effect on the UM, with the ensemble model and PGD-ADT defenses seeing no change.\n",
-    "___\n",
-    "\n",
-    "\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## CW Attack and Evaluation\n",
     "\n",
     "For the CW attack, the variables altered were the learning rate and normalization method. There are a total of 10 variations where 5 learning rates are repeated for each normalization method. The files for this attack are stored in ~/src/task1/attack2.\n",
@@ -217,13 +220,6 @@
     "- [Meng, Ying, et al. (2020)](https://arxiv.org/abs/2001.00308) \"Ensembles of many diverse weak defenses can be strong: defending deep neural networks against adversarial attacks.\" arXiv preprint arXiv:2001.00308.\n",
     "- [LeCun, Y. & Cortes, C. (2010)](http://yann.lecun.com/exdb/mnist/), 'MNIST handwritten digit database', . "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
