--- a/Task1_update/scripts/cody_scripts/task_3.ipynb
+++ b/Task1_update/scripts/cody_scripts/task_3.ipynb
@@ -155,52 +155,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>> Loading model [../../../models/cnn/model-mnist-cnn-clean.h5]...\n",
-      "WARNING:tensorflow:From C:\\Users\\codyi\\anaconda3\\envs\\athena\\lib\\site-packages\\tensorflow\\python\\ops\\resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From C:\\Users\\codyi\\anaconda3\\envs\\athena\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n"
+      ">>> Loading model [../../../models/cnn/model-mnist-cnn-clean.h5]...\n"
      ]
     }
    ],
    "source": [
-    "from utils.model import load_lenet\n",
-    "from utils.metrics import error_rate\n",
-    "from attacks.attack import generate\n",
-    "from utils.file import load_from_json\n",
+    "import os\n",
+    "\n",
+    "%matplotlib inline\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "# loading experiment configurations\n",
     "model_configs = load_from_json(\"../../configs/BIM/model-mnist.json\")\n",
     "data_configs = load_from_json(\"../../configs/BIM/data-bim-mnist.json\")\n",
     "attack_configs = load_from_json(\"../../configs/BIM/attack-bim-mnist.json\")\n",
     "\n",
-    "# load the targeted model\n",
-    "model_file = os.path.join(model_configs.get(\"dir\"), model_configs.get(\"um_file\"))\n",
-    "target = load_lenet(file=model_file, wrap=True)\n",
-    "\n",
-    "# load the benign samples\n",
-    "\n",
-    "data_file = os.path.join(data_configs.get('dir'), data_configs.get('bs_file'))\n",
-    "data_bs = np.load(data_file)\n",
-    "# load the corresponding true labels\n",
+    "# load labels\n",
     "label_file = os.path.join(data_configs.get('dir'), data_configs.get('label_file'))\n",
     "labels = np.load(label_file)\n",
+    "labels = np.asarray([np.argmax(p) for p in labels])\n",
     "\n",
-    "# generate AEs\n",
-    "# in this example, we generate AEs for 5 benign samples\n",
-    "# data_bs = data_bs[:5]\n",
-    "# labels = labels[:5]\n",
-    "# let save=True and specify an output folder to save the generated AEs\n",
-    "generate_ae(model=target, data=data_bs, labels=labels, attack_configs=attack_configs, save=True, output_dir=\"../../data\")"
+    "# load list of AEs\n",
+    "ae_list = data_configs.get('ae_files')\n",
+    "\n",
+    "# load the benign samples to get dimensions of images\n",
+    "data_file = os.path.join(data_configs.get('dir'), data_configs.get('bs_file'))\n",
+    "data_bs = np.load(data_file)\n",
+    "img_rows, img_cols = data_bs.shape[1], data_bs.shape[2]\n",
+    "\n",
+    "# load the targeted model\n",
+    "model_file = os.path.join(model_configs.get(\"dir\"), model_configs.get(\"um_file\"))\n",
+    "model = load_lenet(file=model_file, wrap=True)\n",
+    "\n",
+    "fig, axs = plt.subplots(3,3,\n",
+    "                        facecolor='w',\n",
+    "                        figsize=(8,8), dpi=102)\n",
+    "\n",
+    "fig.subplots_adjust(hspace=0, wspace=0)\n",
+    "\n",
+    "fig.suptitle('Example BIM AEs')\n",
+    "\n",
+    "rows = ['epsilon={}'.format(col) for col in [0.1, 0.2, 0.3]]\n",
+    "cols = ['max_iter={}'.format(row) for row in [50, 60, 70]]\n",
+    "\n",
+    "# set labels for columns\n",
+    "for ax, col in zip(axs[0], cols):\n",
+    "    ax.set_title(col)\n",
+    "\n",
+    "# set labels for rows\n",
+    "for ax, row in zip(axs[:,0], rows):\n",
+    "    ax.set_ylabel(row, rotation=90, size='large')\n",
+    "\n",
+    "# plot some adversarial examples and their predictions\n",
+    "for ae_ind, ax in zip(range(len(ae_list)), axs.flatten()):\n",
+    "    # load AE image\n",
+    "    ae_file = os.path.join(data_configs.get('dir'), ae_list[ae_ind])\n",
+    "    data_adv = np.load(ae_file)\n",
+    "    predictions = model.predict(data_adv)\n",
+    "    predictions = np.asarray([np.argmax(p) for p in predictions])\n",
+    "    img = data_adv[0].reshape((img_rows, img_cols))\n",
+    "    # add AE image\n",
+    "    ax.imshow(img, cmap='gray')\n",
+    "    # turn off useless ticks and tick labels\n",
+    "    plt.setp(ax.get_xticklabels(), visible=False)\n",
+    "    plt.setp(ax.get_yticklabels(), visible=False)\n",
+    "    ax.tick_params(axis='both', which='both', length=0)\n",
+    "    \n",
+    "fig.savefig('../../figures/example_BIM_AEs.png', dpi=fig.dpi, pad_inches=0, bbox_inches='tight')"
    ]
   },
   {
