BIM: fixed evaluations, added code for plots and added plots to report

--- a/Task1_update/report.ipynb
+++ b/Task1_update/report.ipynb
@@ -64,26 +64,34 @@
     "### Experimental Setting\n",
     "Here we consider an adversarial attack on a convolutional neural network (CNN) trained on a subset (10%) of the MNIST dataset using nine variations of the [basic iterative method](https://arxiv.org/pdf/1607.02533.pdf) (BIM). We generate these variations as a pairwise combination over the epsilon values of `0.1, 0.2, 0.3` and maximum iteration values of `50, 60, 70` to reveal how these parameters influence the error rate of the undefeneded model (UM), an athena ensemble, and PGD-ADT. \n",
     "\n",
-    "Using the following configurations, we generate AEs and evaluate their effectivness against the UM, the ensemble model, and PGD-ADT, using `Task3/scripts/cody_scripts/task3.ipynb` \n",
-    "- `src/configs/task1/athena-mnist.json`\n",
-    "- `src/configs/task1/attack-bim-mnist.json`\n",
-    "- `src/configs/task1/data-bim-mnist.json`\n",
+    "Using the following configurations, we generate adversarial examples (AEs) and evaluate their effectivness against the undefended model (UM), the ensemble model, and PGD-ADT. When evaluating the AEs, we use a diverse subset of 20 of Athena's 73 weak defenses for MNIST, which can be found in the first configuration file. \n",
+    "- `configs/BIM/athena-mnist.json`\n",
+    "- `configs/BIM/attack-bim-mnist.json`\n",
+    "- `configs/BIM/data-bim-mnist.json`\n",
     "\n",
-    "The AEs can be found at `Task3/data/AE-mnist-cnn-clean-bim_eps{e}_maxiter{i}.npy`, where `e` is a value for epsilon and `i` is the maximum number of iterations.\n",
+    "All scripts for the BIM experiments can be found in the following jupyter notebook `Task3/scripts/cody_scripts/task3.ipynb`.\n",
+    "\n",
+    "The AEs we generated can be found at `Task3/data/AE-mnist-cnn-clean-bim_eps{e}_maxiter{i}.npy`, where `e` is a value for epsilon and `i` is the maximum number of iterations.\n",
+    "\n",
+    "### Initial Investigation\n",
+    "We first plot a sample of the AEs for each pair of epsilon and maximum iteration values to get an understanding of how these values impact the perterbations.\n",
+    "\n",
+    "![](figures/example_BIM_AEs.png)\n",
+    "\n",
+    "We can see that with each increase in epsilon, there is a distinct increase in the amount of visual noise in the images. However, there is very little difference for each increase in the maximum number of iterations. Ultimately, all of the above AEs fooled the undefended model (UM). \n",
+    "\n",
+    "## Evaluation\n",
+    "\n",
+    "Plotting the error rates for each model, we find \n",
+    "\n",
+    "![](figures/bim_evaluation.png)\n",
+    "\n",
     "### Undefended Model Results\n",
     "We find that the error rate drops only for the UM and only twice. We would expect these drops to occur only at 70 and 60, perhaps as some upper bound is reached. However, we find the interesting result that the drop in error rate occurs only from 100 to 90 and 70 to 60; the error rate is the same for 90, 80, and 70. \n",
     "\n",
     "### Ensemble and PGD-ADT Results\n",
     "The ensemble has nearly the same error rate as PGD-ADT, which in all cases is about 2%. \n",
     "\n",
-    "| BIM Error Rate (epsilon=0.1) |             |             |             |                                             |                                             |\n",
-    "|------------------------|-------------|-------------|-------------|---------------------------------------------|---------------------------------------------|\n",
-    "| Max Iterations         | UM          | Ensemble    | PGD-ADT     | 9->1                                        | 4->9                                        |\n",
-    "| 100                    | 0.933534743 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter90_9to1.png)  | ![](figures/bim_eps0.1_maxiter100_4to9.png) |\n",
-    "| 90                     | 0.930513595 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter90_9to1.png)  | ![](figures/bim_eps0.1_maxiter90_4to9.png)  |\n",
-    "| 80                     | 0.930513595 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter80_9to1.png)  | ![](figures/bim_eps0.1_maxiter80_4to9.png)  |\n",
-    "| 70                     | 0.930513595 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter70_9to1.png)  | ![](figures/bim_eps0.1_maxiter70_4to9.png)  |\n",
-    "| 60                     | 0.926485398 | 0.022155086 | 0.025176234 | ![](figures/bim_eps0.1_maxiter60_9to1.png)  | ![](figures/bim_eps0.1_maxiter60_4to9.png)  |\n",
     "\n",
     "In conclusion, BIM is only effective against the UM, with the erorr rates of the ensemble model and PGD-ADT being around 2%. Changes to the maximum iterations for BIM only have a (slight) effect on the UM, with the ensemble model and PGD-ADT defenses seeing no change.\n",
     "___"
